update and deploy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PWA Preact</title>
+    <meta name="description" content="A minimalistic PWA boilerplate based on Webpack 3, Preact and Typescript with performance in mind">
     <meta name="theme-color" content="#fff">
     <link rel="manifest" href="./manifest.json">
     
