--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="preload" href="css/home.style.bundle.743a510e.js" as="script">
     
 <style type="text/css">
-  body,h1,html{margin:0;padding:0}h1{font-size:100%;font-weight:400}button{margin:0}html{box-sizing:border-box}*,:after,:before{box-sizing:inherit}html{background-color:#fff;font-size:16px;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;min-width:300px;overflow-x:hidden;overflow-y:scroll;text-rendering:optimizeLegibility;text-size-adjust:100%}section{display:block}body,button{font-family:BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,Arial,sans-serif}body{color:#4a4a4a;font-size:1rem;font-weight:400;line-height:1.5}a{color:#3273dc;text-decoration:none}span{font-style:inherit;font-weight:inherit}.container{margin:0 auto;position:relative}@media screen and (min-width:1024px){.container{max-width:960px;width:960px}}.subtitle,.title{word-break:break-word}.subtitle:not(:last-child),.title:not(:last-child){margin-bottom:1.5rem}.title{color:#363636;font-size:2rem;font-weight:600;line-height:1.125}.title:not(.is-spaced)+.subtitle{margin-top:-1.5rem}.subtitle{color:#4a4a4a;font-size:1.25rem;font-weight:400;line-height:1.25}.section{padding:3rem 1.5rem}
+    body,h1,html{margin:0;padding:0}h1{font-size:100%;font-weight:400}button{margin:0}html{box-sizing:border-box}*,:after,:before{box-sizing:inherit}html{background-color:#fff;font-size:16px;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;min-width:300px;overflow-x:hidden;overflow-y:scroll;text-rendering:optimizeLegibility;text-size-adjust:100%}section{display:block}body,button{font-family:BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,Arial,sans-serif}body{color:#4a4a4a;font-size:1rem;font-weight:400;line-height:1.5}a{color:#3273dc;text-decoration:none}span{font-style:inherit;font-weight:inherit}.container{margin:0 auto;position:relative}@media screen and (min-width:1024px){.container{max-width:960px;width:960px}}.subtitle,.title{word-break:break-word}.subtitle:not(:last-child),.title:not(:last-child){margin-bottom:1.5rem}.title{color:#363636;font-size:2rem;font-weight:600;line-height:1.125}.title:not(.is-spaced)+.subtitle{margin-top:-1.5rem}.subtitle{color:#4a4a4a;font-size:1.25rem;font-weight:400;line-height:1.25}.section{padding:3rem 1.5rem}
 </style>
 <link href="css/home.style.f4071fdc.b9602396.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link href="css/home.style.f4071fdc.b9602396.css" rel="stylesheet"></noscript>
@@ -74,14 +74,44 @@
   </style>
   <script>
   if ('serviceWorker' in navigator) {
+    var workerFileName = '/pwa-preact/sw.js';
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/pwa-preact/sw.js').then(registration => {
-        console.log('SW registered: ', registration);
-        registration.pushManager.subscribe({userVisibleOnly: true});
-      }).catch(registrationError => {
-        console.log("error")
-      });
+        navigator.serviceWorker.register(workerFileName, { scope: "/" })
+            .then(function (reg) {
+                var serviceWorker;
+                if (reg.installing) {
+                    serviceWorker = reg.installing;
+                    // console.log('Service worker installing');
+                } else if (reg.waiting) {
+                    serviceWorker = reg.waiting;
+                    // console.log('Service worker installed & waiting');
+                } else if (reg.active) {
+                    serviceWorker = reg.active;
+                    // console.log('Service worker active');
+                }
+
+                if (serviceWorker) {
+                    console.log("sw current state", serviceWorker.state);
+                    if (serviceWorker.state == "activated") {
+                        //If push subscription wasnt done yet have to do here
+                        console.log("sw already activated - Do watever needed here");
+                    }
+                    serviceWorker.addEventListener("statechange", function (e) {
+                        console.log("sw statechange : ", e.target.state);
+                        if (e.target.state == "activated") {
+                            // use pushManger for subscribing here.
+                            console.log("Just now activated. now we can subscribe for push notification")
+                            subscribeForPushNotification(reg);
+                        }
+                    });
+                }
+            },
+                function (err) {
+                    console.error('unsuccessful registration with ', workerFileName, err);
+                }
+            );
     });
-  }</script>
+  }
+  </script>
 <script type="text/javascript" src="js/commons.95a2f128.js"></script><script type="text/javascript" src="js/home.bundle.c3416644.js"></script><script type="text/javascript" src="css/home.style.bundle.743a510e.js"></script></body>
 </html>
