--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
   if ('serviceWorker' in navigator) {
     var workerFileName = '/pwa-preact/sw.js';
     window.addEventListener('load', () => {
-        navigator.serviceWorker.register(workerFileName, { scope: "/" })
+        navigator.serviceWorker.register(workerFileName)
             .then(function (reg) {
                 var serviceWorker;
                 if (reg.installing) {
